--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,6 +2,7 @@
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/js/delete_category.js": "/js/delete_category.js",
+    "/js/delete_tour.js": "/js/delete_tour.js",
     "/js/index_order.js": "/js/index_order.js",
     "/js/index_user.js": "/js/index_user.js"
 }
